--- a/build-logic/src/main/groovy/org.apache.groovy-core.gradle
+++ b/build-logic/src/main/groovy/org.apache.groovy-core.gradle
@@ -194,11 +194,10 @@ tasks.withType(Test).configureEach {
     jvmArgs /*"-Dgroovy.attach.groovydoc=true", "-Dgroovy.attach.runtime.groovydoc=true",*/ "-Dgroovy.antlr4.cache.threshold=100"
 }
 
-tasks.named("generateGrammarSource") {
+def generateGrammarSourceTask = tasks.named("generateGrammarSource") {
     maxHeapSize = '1g'
     outputs.cacheIf { true }
     outputDirectory = file("${buildDir}/generated/sources/antlr4")
-    sourceSets.main.java.srcDirs += outputDirectory
 
     final PARSER_PACKAGE_NAME = 'org.apache.groovy.parser.antlr4'
     arguments += ["-visitor", "-no-listener", "-package", PARSER_PACKAGE_NAME]
@@ -218,6 +217,8 @@ tasks.named("generateGrammarSource") {
         }
     }
 }
+
+sourceSets.main.java.srcDir generateGrammarSourceTask
 
 configurations {
     sourcesForAggregation {
